@@ -30,42 +30,37 @@
     .sp-methods .form-list .ratepayagreement {width: auto;float: none;}
 </style>
 <ul class="form-list" id="payment_form_<?php echo $_code ?>" style="display:none;">
-    <li>
-        <button id="<?php echo $_code ?>readmore" type="button" class="button" onclick="document.getElementById('<?php echo $_code ?>description').toggle(); document.getElementById('<?php echo $_code ?>readless').toggle();this.toggle();"><span><span><?php echo $this->__('Pi Read more') ?></span></span></button>
-        <div id='<?php echo $_code ?>description' style="display:none;">
-            <div>
-                <div style="font-weight:bold;">
-                    <span style="color:#FF0000;"><?php echo $this->getPaymentHelper()->getStoreName(); ?></span>
-                    <?php echo sprintf($this->__('Pi ratepay_info_block_1'), $this->getDueDays()) ?><br/>
-                </div>
-                <br/>
-                <div>
-                    <?php echo $this->__('Pi ratepay_info_block_2') ?><span style="font-weight:bold;"><?php echo $this->__('Pi ratepay_info_block_3') ?><?php echo $this->getMinAmount(); ?> &euro;</span>
-                    <?php echo $this->__('Pi and') ?> <span style="font-weight:bold;"><?php echo $this->__('Pi ratepay_info_block_4') ?><?php echo $this->getMaxAmount(); ?> &euro;</span><?php echo $this->__('Pi ratepay_info_block_5') ?>
-                </div>
-                <br/>
-                <div>
-                    <?php echo $this->__('Pi ratepay_info_block_6') ?>
-                </div>
-            </div>
-            <hr/>
-        </div>
-        <button style="display:none;" id="<?php echo $_code ?>readless" type="button" class="button" onclick="document.getElementById('<?php echo $_code ?>description').toggle(); document.getElementById('<?php echo $_code ?>readmore').toggle();this.toggle();"><span><span><?php echo $this->__('Pi Read less') ?></span></span></button>
-    </li>
-    <?php if ($this->isAdditionalFieldsNeeded()): ?>
-    <li>
-        <b><?php echo $this->__('Pi Missing contact informations'); ?></b>
-    </li>
-    <?php endif; ?>
-
-    <?php if ($this->isCompanyNeeded()): ?>
+    <?php if (!$this->isWhitelabel()): ?>
         <li>
-            <label for="<?php echo $_code ?>_company" class="required"><em>*</em><?php echo $this->__('Pi Company'); ?></label>
-            <div class="input-box">
-                <input value="" type="text" name="payment[<?php echo $_code ?>_company]" id="<?php echo $_code ?>_company" name="payment[<?php echo $_code ?>_company]" class="input-text required-entry"/>
+            <button id="<?php echo $_code ?>readmore" type="button" class="button" onclick="document.getElementById('<?php echo $_code ?>description').toggle(); document.getElementById('<?php echo $_code ?>readless').toggle();this.toggle();"><span><span><?php echo $this->__('Pi Read more') ?></span></span></button>
+            <div id='<?php echo $_code ?>description' style="display:none;">
+                <div>
+                    <div style="font-weight:bold;">
+                        <span style="color:#FF0000;"><?php echo $this->getPaymentHelper()->getStoreName(); ?></span>
+                        <?php echo sprintf($this->__('Pi ratepay_info_block_1'), $this->getDueDays()) ?><br/>
+                    </div>
+                    <br/>
+                    <div>
+                        <?php echo $this->__('Pi ratepay_info_block_2') ?><span style="font-weight:bold;"><?php echo $this->__('Pi ratepay_info_block_3') ?><?php echo $this->getMinAmount(); ?> &euro;</span>
+                        <?php echo $this->__('Pi and') ?> <span style="font-weight:bold;"><?php echo $this->__('Pi ratepay_info_block_4') ?><?php echo $this->getMaxAmount(); ?> &euro;</span><?php echo $this->__('Pi ratepay_info_block_5') ?>
+                    </div>
+                    <br/>
+                    <div>
+                        <?php echo $this->__('Pi ratepay_info_block_6') ?>
+                    </div>
+                </div>
+                <hr/>
             </div>
+            <button style="display:none;" id="<?php echo $_code ?>readless" type="button" class="button" onclick="document.getElementById('<?php echo $_code ?>description').toggle(); document.getElementById('<?php echo $_code ?>readmore').toggle();this.toggle();"><span><span><?php echo $this->__('Pi Read less') ?></span></span></button>
         </li>
     <?php endif; ?>
+
+    <?php if ($this->isAdditionalFieldsNeeded()): ?>
+        <li>
+            <b><?php echo $this->__('Pi Missing contact informations'); ?></b>
+        </li>
+    <?php endif; ?>
+
     <?php if ($this->isTaxvatNeeded()): ?>
         <li>
             <label for="<?php echo $_code ?>_taxvat" class="required"><em>*</em><?php echo $this->__('Pi Tax/VAT number'); ?></label>
@@ -112,18 +107,4 @@
             </script>
         </li>
     <?php endif; ?>
-        <li>
-            <table>
-                <tr>
-                    <td>
-                        <input type="checkbox" class="checkbox" value="1" name="payment[<?php echo $_code ?>_agreement]" id="<?php echo $_code ?>_agreement" >
-                    </td>
-                    <td>
-                          <span for="<?php echo $_code ?>_agreement" class="required ratepayagreement">
-                          <?php echo $this->__('Pi ratepay_terms_block_1');?> <a target="_blank" href="<?php echo Mage::getStoreConfig("payment/ratepay_rechnung/privacy_policy",$this->getQuote()->getStoreId()); ?>"><?php echo $this->__('Pi RatePAY Data Privacy Policy');?></a>
-                            <?php echo $this->__('Pi ratepay_terms_block_2');?></span>
-                    </td>
-                </tr>
-            </table>
-        </li>
 </ul>
